--- a/resources/css/scss/_variables_bc.scss
+++ b/resources/css/scss/_variables_bc.scss
@@ -37,6 +37,11 @@ $base-font-size: 16px;
     line-height: 24px;
     letter-spacing: -0.65px;
 }
+@mixin bc-font-size-default {
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: -0.7px;
+}
 @mixin bc-font-size-sm {
     font-size: 15px;
     line-height: 24px;
