--- a/resources/css/scss/modules/_button_bc.scss
+++ b/resources/css/scss/modules/_button_bc.scss
@@ -191,6 +191,13 @@
                 }
             }
         }
+        &.sm {
+            .k-button {
+                min-width: 80px;
+                max-width: 80px;
+                padding: 0;
+            }
+        }
     }
     &.round {
         .k-button {
