--- a/resources/css/scss/modules/_form_bc.scss
+++ b/resources/css/scss/modules/_form_bc.scss
@@ -11,6 +11,7 @@
         }
     }
     .form-label {
+        @include bc-font-size-xsm;
         + .form-set {
             margin-left: 6px;
         }
@@ -27,7 +28,7 @@
 }
 .k-dialog {
     .search-control {
-        .label, .form-set {
+        .label{
             margin-right: 6px;
         }
     }
