--- a/resources/css/scss/modules/_table_bc.scss
+++ b/resources/css/scss/modules/_table_bc.scss
@@ -39,6 +39,7 @@ td .form-box, th .form-box {
 */
 
 .table {  
+    border-top: 1px solid $bc-table-th;
     tbody th {
         text-align: center;
     }
@@ -52,8 +53,11 @@ td .form-box, th .form-box {
     }
     td {
         @include bc-font-size-xsm;
-        padding: 5px 10px;
+        padding: 4px 10px;
         height: 38px;
+    }
+    &.sm {
+        td { height: 30px; }
     }
 }
 
