b 시스템 > 툴팁수정(전체페이지) 상담관리 > 요청사항관리, CMS동의서관리, Q&A관리

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -921,6 +921,7 @@ li {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 button {
@@ -5286,8 +5287,8 @@ td .form-group.col > * + * {
   padding: 0 20px;
   border-radius: 3px;
   white-space: nowrap;
-  -webkit-transition: background 0.2s ease-in;
-  transition: background 0.2s ease-in;
+  -webkit-transition: background 0.1s ease-in;
+  transition: background 0.1s ease-in;
   background-color: #0e4194;
   border: 1px solid #0e4194;
   color: #fff;
@@ -5748,8 +5749,8 @@ td .form-group.col > * + * {
   background-size: contain;
   padding: 0;
   position: relative;
-  -webkit-transition: background 0.3s ease;
-  transition: background 0.3s ease;
+  -webkit-transition: background 0.1s ease;
+  transition: background 0.1s ease;
 }
 
 .h-ico.xs {
@@ -7143,8 +7144,8 @@ th .required {
   width: 15px;
   height: 15px;
   background: url("../images/icon/icon_arrow_down.svg") no-repeat center/15px 15px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 .k-dropdown .k-dropdown-wrap.k-state-active .k-i-arrow-60-down:before {
@@ -9347,8 +9348,20 @@ div.k-grid-norecords {
           justify-content: center;
 }
 
+div.k-grid-header {
+  overflow: hidden;
+}
+
 .k-grid-header-wrap thead tr + tr th {
   border-top: 1px solid #e4e4e4;
+}
+
+.k-grid-header .k-header:last-child {
+  border-right-width: 0;
+}
+
+.k-grid .k-filter-row th {
+  border-top: none;
 }
 
 .table-content.grid {
@@ -10478,8 +10491,8 @@ table.k-editor {
   border: 1px solid #ccc;
   border-radius: 3px;
   color: #555;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
   max-width: unset;
   height: 100%;
 }
@@ -14771,7 +14784,6 @@ body {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
-  font-size: 16px;
   color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -15000,8 +15012,8 @@ body {
 .sidebar-wrap.fold .sidebar-foot .h-ico.lnb-close {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 .sidebar-wrap .sidebar-head {
@@ -15182,8 +15194,6 @@ body {
   background-repeat: no-repeat;
   background-size: 15px 15px;
   text-align: center;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
 }
 
 .has-submenu.active .sidebar-1depth::after {
