--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -122,7 +122,6 @@ body {
 }
 .profile-box {
 	@include font-size-sm;
-	font-size: $base-font-size;
 	color: $white;
 	display: flex;
 	align-items: center;
@@ -276,7 +275,7 @@ body {
 			}
 			.h-ico.lnb-close {
 				transform: rotate(180deg);
-				transition: all 0.3s ease;
+				transition: all 0.2s ease;
 			}
 		}
 	}
@@ -430,8 +429,8 @@ body {
 	background-repeat: no-repeat;
 	background-size: 15px 15px;
 	text-align: center;
-	-webkit-transition: all 0.3s ease;
-	transition: all 0.3s ease;
+	// -webkit-transition: all 0.2s ease;
+	// transition: all 0.2s ease;
 }
 .has-submenu.active .sidebar-1depth::after {
 	transform: rotate(180deg);
