--- a/pages/layout/lnb.html
+++ b/pages/layout/lnb.html
@@ -1,7 +1,7 @@
 <aside class="sidebar-wrap">
     <!-- 상단 고정영역 -->
     <div class="sidebar-head">
-        <a class="main-menu" aria-label=""><i class="h-ico sm bookmark">북마크</i><span>즐겨 찾는 메뉴</span></a>
+        <div class="main-menu" aria-label=""><i class="h-ico sm bookmark">북마크</i><span>즐겨 찾는 메뉴</span></div>
         <ul class="sub-menu">
             <a href="#;">입금 관리</a>
             <a href="#;">계약 관리</a>
