--- a/resources/css/index_bc.css
+++ b/resources/css/index_bc.css
@@ -1055,6 +1055,7 @@ template {
 }
 
 .k-window.k-dialog {
+  height: auto !important;
   padding: 0;
   background: #fff;
   outline: 0;
@@ -1447,10 +1448,18 @@ template {
   margin-left: 10px;
 }
 
+.table-group .search-control .form-group:only-child {
+  width: 100%;
+}
+
 .table-set {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.table-set .table-content.grid {
+  height: 100%;
 }
 
 .text-center th,
@@ -1922,7 +1931,6 @@ td .form-group.col > * + * {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
 }
 
 .form-set > *:not(.bar) + *:not(.bar) {
@@ -2007,11 +2015,18 @@ td .form-group.col > * + * {
   font-weight: 500;
 }
 
+.search-group .form-group + .form-group {
+  margin-left: 20px;
+}
+
 .search-group .form-set {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  padding-right: 20px;
+}
+
+.search-btn {
+  padding: 9px 0;
 }
 
 .search-control {
@@ -2040,7 +2055,11 @@ td .form-group.col > * + * {
 }
 
 .search-control.control-3 .form-group {
-  width: 33.3%;
+  width: calc(33.3% - 20px);
+}
+
+.search-control.control-3 .form-group:nth-of-type(3n+1) {
+  margin-left: 0;
 }
 
 .search-control.control-3 .form-group .label {
@@ -2932,6 +2951,11 @@ td .form-group.col > * + * {
     * 헤더버튼
     * ------------------------------
     */
+}
+
+.h-btn.md, .k-button.md {
+  height: 32px;
+  padding: 0 30px;
 }
 
 .h-btn:hover, .h-btn:focus, .k-button:hover, .k-button:focus {
@@ -4949,6 +4973,7 @@ td .divide + .divide {
   font-weight: 400;
   line-height: 1;
   letter-spacing: -0.75px;
+  white-space: nowrap;
 }
 
 .amount-set .amount.current {
@@ -5105,6 +5130,9 @@ td .divide + .divide {
   padding: 20px;
   background-color: #fff;
   border: 1px solid #e4e4e4;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .tab-control.border .tabpanel.no-line {
@@ -5112,9 +5140,14 @@ td .divide + .divide {
   border: none;
 }
 
+.tab-control.border.search .search-control {
+  margin-top: 0;
+}
+
 .tab-control.border.search .tabpanel {
   border: none;
   padding: 0;
+  background-color: transparent;
 }
 
 .tab-control.border.search .tabpanel .search-control + .table-set {
@@ -16749,12 +16782,6 @@ body {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   width: 100%;
-}
-
-.tabpanel {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
 }
 
 .tabpanel .table-set {
