--- a/resources/css/index_bp.css
+++ b/resources/css/index_bp.css
@@ -1669,6 +1669,7 @@ td .divide + .divide {
   font-weight: 400;
   line-height: 1;
   letter-spacing: -0.75px;
+  white-space: nowrap;
 }
 
 .amount-set .amount.current {
@@ -1825,6 +1826,9 @@ td .divide + .divide {
   padding: 20px;
   background-color: #fff;
   border: 1px solid #e4e4e4;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .tab-control.border .tabpanel.no-line {
@@ -1832,9 +1836,14 @@ td .divide + .divide {
   border: none;
 }
 
+.tab-control.border.search .search-control {
+  margin-top: 0;
+}
+
 .tab-control.border.search .tabpanel {
   border: none;
   padding: 0;
+  background-color: transparent;
 }
 
 .tab-control.border.search .tabpanel .search-control + .table-set {
@@ -3923,6 +3932,7 @@ td .divide + .divide {
 }
 
 .k-window.k-dialog {
+  height: auto !important;
   padding: 0;
   background: #fff;
   outline: 0;
@@ -4252,10 +4262,18 @@ td .divide + .divide {
   margin-left: 10px;
 }
 
+.table-group .search-control .form-group:only-child {
+  width: 100%;
+}
+
 .table-set {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.table-set .table-content.grid {
+  height: 100%;
 }
 
 .text-center th,
@@ -4697,7 +4715,6 @@ td .form-group.col > * + * {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
 }
 
 .form-set > *:not(.bar) + *:not(.bar) {
@@ -4782,11 +4799,18 @@ td .form-group.col > * + * {
   font-weight: 500;
 }
 
+.search-group .form-group + .form-group {
+  margin-left: 20px;
+}
+
 .search-group .form-set {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  padding-right: 20px;
+}
+
+.search-btn {
+  padding: 9px 0;
 }
 
 .search-control {
@@ -4815,7 +4839,11 @@ td .form-group.col > * + * {
 }
 
 .search-control.control-3 .form-group {
-  width: 33.3%;
+  width: calc(33.3% - 20px);
+}
+
+.search-control.control-3 .form-group:nth-of-type(3n+1) {
+  margin-left: 0;
 }
 
 .search-control.control-3 .form-group .label {
@@ -5764,6 +5792,11 @@ td .form-group.col > * + * {
     * 헤더버튼
     * ------------------------------
     */
+}
+
+.h-btn.md, .k-button.md {
+  height: 32px;
+  padding: 0 30px;
 }
 
 .h-btn:hover, .h-btn:focus, .k-button:hover, .k-button:focus {
