--- a/resources/css/scss/index_bc.scss
+++ b/resources/css/scss/index_bc.scss
@@ -34,11 +34,10 @@
     width: 100%;
 }
 .tabpanel {
-    flex: 1;
+    // flex: 1;
     .table-set {
        height: 100%;
     }
-
 }
 .k-toolbar.k-grid-toolbar {
     background-color: $white;
